# form_automation

./: .gitignore  README.md  airtable_notifier.py  airtable_reader.py  config_example.json  fetch_html.py  field_handler.py  form_analyzer.py  form_filler.py  pyproject.toml  run.py  run_batch.py  run_codegen.py  slack_notifier.py  test_playwright.py
data/: Target.csv  targets.csv
